# TradingAgents

./: .env.example  .mise.toml  AGENTS.md  CLAUDE.md  CLAUDE.md.bak  FundamentalDataService_PRD.md  MarketDataService_PRD.md  NewsService_PRD.md  README.md  SocialMediaService_PRD.md  alembic.ini  litellm.yml  main.py  package-lock.json  pyproject.toml  pyrefly.toml  pyrightconfig.json  setup.py  test_typecheck.sh
.claude/: settings.json
alembic/: env.py
assets/indexes/: russel1000.json  russel200.json  snp500.json
cli/: main.py  utils.py
docker/: Dockerfile  docker-compose.yml  seed.sql
docs/: agent-development.md  api-reference.md  architecture.md  troubleshooting.md
prd/: news_service.md
tests/: __init__.py  conftest.py
tests/domains/news/: __init__.py  test_article_scraper_client.py  test_google_news_client.py  test_news_repository.py  test_news_service.py
tests/fixtures/vcr_cassettes/news/: TestArticleScraperClient.test_scrape_article_barchart.yaml  TestArticleScraperClient.test_scrape_article_bloomberg.yaml  TestArticleScraperClient.test_scrape_article_business_insider.yaml  TestArticleScraperClient.test_scrape_article_cnbc.yaml  TestArticleScraperClient.test_scrape_article_forbes.yaml  TestArticleScraperClient.test_scrape_article_marketwatch.yaml  TestArticleScraperClient.test_scrape_article_reuters.yaml  TestArticleScraperClient.test_scrape_article_seeking_alpha.yaml  TestArticleScraperClient.test_scrape_article_tip_ranks.yaml  TestArticleScraperClient.test_scrape_article_with_404.yaml  TestArticleScraperClient.test_scrape_article_wsj.yaml  TestGoogleNewsClient.test_get_company_news_real.yaml  TestGoogleNewsClient.test_get_global_news_real.yaml  (+4 more)
tradingagents/: config.py
tradingagents/agents/: __init__.py
tradingagents/agents/analysts/: fundamentals_analyst.py  market_analyst.py  news_analyst.py  social_media_analyst.py
tradingagents/agents/libs/: agent_states.py  agent_toolkit.py  context_helpers.py  memory.py
tradingagents/agents/managers/: research_manager.py  risk_manager.py
tradingagents/agents/researchers/: bear_researcher.py  bull_researcher.py
tradingagents/agents/trader/: trader.py
tradingagents/agents/utils/: agent_utils.py  context_helpers.py  memory.py  new_toolkit.py  service_toolkit.py  toolkit_v2.py
tradingagents/clients/: __init__.py  base.py  conftest.py  finnhub_client.py  google_news_client.py  test_finnhub_client.py  yfinance_client.py
tradingagents/dataflows/: googlenews_utils.py  reddit_utils.py  stockstats_utils.py  utils.py  yfin_utils.py
tradingagents/domains/marketdata/: fundamental_data_service.py  fundamental_data_service_test.py  insider_data_service.py  market_data_service.py  market_data_service_test.py  models.py
tradingagents/domains/news/: article_scraper_client.py  google_news_client.py  news_repository.py  news_service.py  test_news_service.py
tradingagents/domains/socialmedia/: reddit_client.py  social_media_repository.py  social_media_service.py  test_social_media_service.py
tradingagents/graph/: __init__.py  conditional_logic.py  graph_setup.py  propagation.py  reflection.py  setup.py  signal_processing.py  trading_graph.py
tradingagents/lib/: __init__.py  database.py
tradingagents/models/: __init__.py  context.py
tradingagents/repositories/: __init__.py  base.py  social_repository.py
tradingagents/services/: __init__.py  base.py  builders.py  fundamental_data_service.py  market_data_service.py  news_service.py  social_media_service.py  test_fundamental_data_service.py  test_insider_data_service.py  test_market_data_service.py  test_news_service.py  test_social_media_service.py
typings/: newspaper.pyi
(+6 files in other folders)
